Make hint not exercise, addresses #208

--- a/05-infer/01-lesson/05-01-lesson.Rmd
+++ b/05-infer/01-lesson/05-01-lesson.Rmd
@@ -579,7 +579,7 @@ ggplot(boot_dist_consci, aes(x = ___)) +
   ___
 ```
 
-```{r ex6-hint, exercise=TRUE}
+```{r ex6-hint}
 ggplot(boot_dist_consci, aes(x = ___)) +
   geom_density()
 ```
